--- a/FUIExamples/Content/Site.css
+++ b/FUIExamples/Content/Site.css
@@ -1,31 +1,92 @@
-﻿/* Move down content because we have a fixed navbar that is 50px tall */
-body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿/* Primary Button Colors - FUI Override */
+
+/*-------------------
+       Primary
+--------------------*/
+/*--- Standard ---*/
+.ui.primary.buttons .button,
+.ui.primary.button {
+    background-color: #00AA7E;
+    color: #FFFFFF;
+    text-shadow: none;
+    background-image: none;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.ui.primary.button {
+    -webkit-box-shadow: 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
+    box-shadow: 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
-
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-    .jumbotron {
-        margin-top: 20px;
+    .ui.primary.buttons .button:hover,
+    .ui.primary.button:hover {
+        background-color: #13ad85;
+        color: #FFFFFF;
+        text-shadow: none;
     }
 
-    .body-content {
-        padding: 0;
+    .ui.primary.buttons .button:focus,
+    .ui.primary.button:focus {
+        background-color: #00533e;
+        color: #FFFFFF;
+        text-shadow: none;
     }
+
+    .ui.primary.buttons .button:active,
+    .ui.primary.button:active {
+        background-color: #13ad85;
+        color: #FFFFFF;
+        text-shadow: none;
+    }
+
+    .ui.primary.buttons .active.button,
+    .ui.primary.buttons .active.button:active,
+    .ui.primary.active.button,
+    .ui.primary.button .active.button:active {
+        background-color: #2185D0;
+        color: #FFFFFF;
+        text-shadow: none;
+    }
+
+/* Basic */
+
+.ui.basic.primary.buttons .button,
+.ui.basic.primary.button {
+    -webkit-box-shadow: 0px 0px 0px 1px #2185D0 inset !important;
+    box-shadow: 0px 0px 0px 1px #2185D0 inset !important;
+    color: #2185D0 !important;
+}
+
+    .ui.basic.primary.buttons .button:hover,
+    .ui.basic.primary.button:hover {
+        background: transparent !important;
+        -webkit-box-shadow: 0px 0px 0px 1px #13eab3 inset !important;
+        box-shadow: 0px 0px 0px 1px #13ad85 inset !important;
+        color: #13ad85 !important;
+    }
+
+    .ui.basic.primary.buttons .button:focus,
+    .ui.basic.primary.button:focus {
+        background: transparent !important;
+        -webkit-box-shadow: 0px 0px 0px 1px #00533e inset !important;
+        box-shadow: 0px 0px 0px 1px #00533e inset !important;
+        color: #13ad85 !important;
+    }
+
+.ui.basic.primary.buttons .active.button,
+.ui.basic.primary.active.button {
+    background: transparent !important;
+    -webkit-box-shadow: 0px 0px 0px 1px #1279c6 inset !important;
+    box-shadow: 0px 0px 0px 1px #1279c6 inset !important;
+    color: #13ad85 !important;
+}
+
+.ui.basic.primary.buttons .button:active,
+.ui.basic.primary.button:active {
+    -webkit-box-shadow: 0px 0px 0px 1px #13ad85 inset !important;
+    box-shadow: 0px 0px 0px 1px #13ad85 inset !important;
+    color: #13ad85 !important;
+}
+
+.ui.buttons:not(.vertical) > .basic.primary.button:not(:first-child) {
+    margin-left: -1px;
 }
